[package]
name = "sunrs"
version = "0.1.0"
authors = ["Tim Deve <timdeve@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = '1.2'
c2rust-bitfields='0.3.0'
libc = '0.2.67'
serde = { version = "1.0", features = ["derive"] }
