[package]
name = "sunrs"
version = "0.2.0"
authors = ["Tim Dévé <timdeve@users.noreply.github.com>"]
edition = "2018"

[dependencies]
bincode = "1.2"
c2rust-bitfields="0.3.0"
dirs = "4.0.0"
hex = "0.4.2"
libc = "0.2.67"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.133"
toml = "0.5.8"
